<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"

    android:background="@color/app_background">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_patient"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/page_title_line"
        android:layout_alignRight="@id/page_title"
        android:layout_alignLeft="@id/page_title"
        android:layout_marginTop="12dp"
        android:layout_below="@id/page_title"
        android:background="#56c79c"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/message_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_title_line"
        android:layout_marginTop="18dp"
        android:text="@string/message_login"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/experiment_researcher_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_login"
        android:layout_marginTop="60dp"
        android:text="@string/experiment_researcher"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/experiment_researcher"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/experiment_researcher_title"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/user_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/experiment_researcher"
        android:layout_marginTop="8dp"
        android:text="@string/message_patient_name"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <EditText
        style="@style/edit_text"
        android:layout_marginTop="8dp"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_title"

        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp"
        android:text="@string/message_patient_number"
        android:textColor="@color/text_color"
        android:textSize="12sp" />
    <EditText
        style="@style/edit_text"
        android:layout_below="@id/number_title"
        android:id="@+id/patient_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:imeActionLabel="@string/action_create"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="#fff"
        android:minHeight="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rectangle_56c79c_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create"
        android:enabled="false"
        android:text="@string/button_continue" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:layout_centerInParent="true" />
</RelativeLayout>