<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/linearLayout"
    android:background="#001b37"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/page_title"
        android:textStyle="bold"
        android:text="@string/title_connect"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/page_title_line"
        android:layout_alignRight="@id/page_title"
        android:layout_alignLeft="@id/page_title"
        android:layout_marginTop="12dp"
        android:layout_below="@id/page_title"
        android:background="#56c79c"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/calibration_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_title_line"
        android:layout_marginTop="14dp"
        android:text="@string/message_connect"
        android:textColor="#fff"
        android:textSize="16sp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/select_device"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/AVAILABLEDEVICES"
            android:textColor="#56cce0"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_select" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/btn_scan"
            app:layout_constraintTop_toBottomOf="@+id/tv_available"
            android:scrollbarStyle="outsideOverlay"/>

        <TextView
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/scan"
            android:textColor="#56cce0"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/selector_rectangle_56c79c_en_dis"
        android:minHeight="44dp"
        android:text="@string/connect"
        android:textColor="@color/edittext_color" />




</RelativeLayout>